# OpenSource-C-Arkanoid

./: README.md  contributors.txt  index.html  params.json
Binaries(MSVC++.Win32)/resources/: MainExit.res  MainMenu.res  MainStart.res  YouWin.res
Binaries(MinGW-W64.gcc)/resources/: BackGround.res
Resource Sources/: MyMainMenu.psd
Source/: Ball.h  Board.h  Brick.h  CImg.h  CMakeLists.txt  GamePad.h  Menu.h  RectangleElement.h  main.cpp
